# PuzzleScript

./: .compile.swp  .env.example  .gitattributes  .gitignore  .htaccess  CHANGELOG.txt  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  CPP_PORT.md  DEV.md  DEVELOPMENT.md  LICENSE  LINGUIST.md  Makefile  ProgressReport.md  README  README.md  Refactor.md  RefactorImplementation.md  Syntax.rsc  TO DO.txt  TODO.md  _notes.md  access_token.py  all_documentation.txt  auth.html  brainstorm.py  build-codemirror6.js  buildGame.html  client.py  commit  compile  compile.js  compute_edit_distances.py  compute_from_idea_edit_distances.py  connected_textures.md  debug.html  debug_inlined.txt  editor.html  (+72 more)
.build/: buildnumber.txt
.github/: FUNDING.yml  ISSUE_TEMPLATE.md
Documentation/: about.html  actionbutton.html  collisionlayers.html  credits.html  detailed_rebuttal.html  directions.html  documentation.html  executionorder.html  faq.html  gifs.html  input.html  legend.html  leveleditor.html  levels.html  objects.html  permanent_urls.html  prelude.html  randomness.html  realtime.html  rigidbodies.html  rules.html  rules101.html  sounds.html  wincondition.html  winconditions.html
Levels/: BugTest  HandV  Sokoban
Play/: index.html
arduboy/: arduboy.ino  generated.h
css/: .codemirror.css.swp  .codemirrormods.css.swp  .dialog.css.swp  ambiance.css  buttons.css  codemirror.css  codemirrormods.css  combined.css  concat  console.css  docs.css  frontpage.css  gamecanvas.css  jquery-ui-1.10.4.custom.min.css  layout.css  midnight.css  show-hint.css  soundbar.css  toolbar.css
current/: webthing.hxproj
demo/: README  actiontest.txt  againexample.txt  ardutest1.txt  basic_tests.txt  blank.txt  blockfaker.txt  byyourside.txt  cakemonsters.txt  castlemouse.txt  chaos wizard.txt  coincounter.txt  collapse.txt  color chained.txt  constellationz.txt  cratopia.txt  cute train.txt  dropswap.txt  dungeon janitor.txt  easyenigma.txt  ebony and ivory.txt  equestrianarmageddon.txt  ex1.txt  ex2.txt  ex3.txt  ex4.txt  ex5.txt  heroes_of_sokoban.txt  heroes_of_sokoban_2.txt  icycrates.txt  kettle.txt  ledchallenge  ledchallenge.txt  legend of zokoban.txt  limerick.txt  lovendpieces.txt  lunar_lockout.txt  manic_ammo.txt  mazezam.txt  microban.txt  (+41 more)
icons/: index.html
images/: minimize
js/: addListeners.js  addListeners_Editor.js  addlisteners.js  addlisteners_editor.js  addlisteners_editor_.js  altfont.js  buildStandalone.js  codemirror.js  colors.js  compiler.js  connectedTextures.js  console.js  debug.js  debug_off.js  debug_replay.js  editor.js  embedded.js  engine.js  font.js  gamalyze.js  gamedat.js  globalVariables.js  graphics.js  inputoutput.js  inputoutput.js.BACKUP.29483.js  inputoutput.js.LOCAL.29483.js  inputoutput.js.REMOTE.29483.js  jsedn.js  layout.js  makegif.js  mobile.js  parser.js  rng.js  scripts_compiled.js  search.js  sfxr.js  soundbar.js  toolbar.js
layouttest/: index.html
logs/: brainstorm_s-0.json  brainstorm_s-0.txt
min_games/: 10147745.txt  10308149.txt  3d_sokoban.txt  6877929.txt  6896687.txt  6902186.txt  6964175.txt  7093901.txt  7093917.txt  7178156.txt  7285472.txt  7714572.txt  8391452.txt  9474793.txt  actiontest.txt  againexample.txt  atlas shrank.txt  blank.txt  blockfaker.txt  bouncers.txt  byyourside.txt  cakemonsters.txt  castlecloset.txt  castlemouse.txt  chaos wizard.txt  coincounter.txt  collapse.txt  color chained.txt  constellationz.txt  cratopia.txt  cute train.txt  dreizack.txt  dropswap.txt  dungeon janitor.txt  ebony and ivory.txt  gobble_rush.txt  heroes_of_sokoban.txt  heroes_of_sokoban_2.txt  heroes_of_sokoban_3.txt  icecrates.txt  (+64 more)
native/: CMakeLists.txt  PLAN.md  README.md
native/include/puzzlescript/: compiler.h  frontend.h  puzzlescript.h
native/src/: c_api.cpp  c_api_compiler.cpp  c_api_frontend.cpp  cli_main.cpp  core.cpp  core.hpp  diagnostics_parity.cpp  diagnostics_parity.hpp  hash.cpp  json.cpp  json.hpp  player_sdl.cpp  simd.cpp  simd.hpp
native/src/cli/: diagnostics_parity.cpp  diagnostics_parity.hpp  main.cpp
native/src/compiler/: BASELINE_MEASUREMENTS.md  IMPLEMENTATION_CHECKLIST.md  PLAN.md  c_api.cpp  compact_turn_codegen.cpp  compact_turn_codegen.hpp  compile_diagnostics.cpp  compile_diagnostics.hpp  compiled_rules_codegen.cpp  compiled_rules_codegen.hpp  diagnostic.cpp  diagnostic.hpp  lower_to_runtime.cpp  lower_to_runtime.hpp  parser.cpp  parser.hpp  rule_text.cpp  rule_text.hpp
native/src/compiler/types/: parser_state.hpp
native/src/frontend/: diagnostic.cpp  diagnostic.hpp  parser.cpp  parser.hpp
native/src/frontend/types/: parser_state.hpp
native/src/generator/: CLEANUP.md  PLAN.md  main.cpp
native/src/player/: sdl_player.cpp  sfxr.cpp  sfxr.hpp
native/src/runtime/: c_api.cpp  compiled_rules.cpp  compiled_rules.hpp  core.cpp  core.hpp  hash.cpp  hash.hpp  json.cpp  simd.cpp
native/src/search/: search_common.hpp
native/src/solver/: HEURISTICS.md  HEURISTICS_IMPLEMENTATION.md  PLAN.md  main.cpp
native/tests/: player_api_tests.cpp  run_fixture_check.js  smoke_trace_inputs.json
pretty_trees/: 10147745.txt  10308149.txt  3d_sokoban.txt  6877929.txt  6896687.txt  6902186.txt  6964175.txt  7093901.txt  7093917.txt  7178156.txt  7285472.txt  7714572.txt  8391452.txt  9474793.txt  actiontest.txt  againexample.txt  atlas shrank.txt  blank.txt  blockfaker.txt  bouncers.txt  byyourside.txt  cakemonsters.txt  castlecloset.txt  castlemouse.txt  chaos wizard.txt  coincounter.txt  collapse.txt  color chained.txt  constellationz.txt  cratopia.txt  cute train.txt  dreizack.txt  dropswap.txt  dungeon janitor.txt  ebony and ivory.txt  gobble_rush.txt  heroes_of_sokoban.txt  heroes_of_sokoban_2.txt  heroes_of_sokoban_3.txt  icecrates.txt  (+64 more)
script-doctor/: .gitignore  README.md  config.py  package-lock.json  package.json  puzzlescript_env.py  python_test.py  test_bfs.py
scripts/: build_parser_corpus_bundle.js  build_performance_testpage.js  compare_parser_phase_diagnostics.js  diff_diagnostics_against_js.sh  diff_diagnostics_corpus.js  diff_parser_state_against_js.sh  diff_parser_state_corpus.js  perf_check.sh  (+4 more)
(+7127 files in other folders)
